# MEGAcmd

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  Makefile.am  README.md  UserGuide.md  autogen.sh  clean.sh  configure.ac  mkdocs.yml  production_build.cmd  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: c++cgi.xy  prisma-analysis.yml  synology-build.yml
build-with-docker/: Dockerfile  Dockerfile.autotools  Dockerfile.c-make  Dockerfile.c-make-v2  Dockerfile.cmake  Dockerfile.cmake-v2  builder.sh
build-with-qt/: Dockerfile  builder.sh
contrib/QtCreator/MEGAcmd/: MEGAcmd.pro  MEGAcmdCommon.pri  vcpkg_inclusion.pri
contrib/QtCreator/MEGAcmd/MEGAcmdClient/: MEGAcmdClient.pri  MEGAcmdClient.pro  icon.rc
contrib/QtCreator/MEGAcmd/MEGAcmdLoader/: MEGAcmdLoader.pro
contrib/QtCreator/MEGAcmd/MEGAcmdServer/: Info_MEGA.plist  MEGAcmdServer.pri  MEGAcmdServer.pro  app.icns  icon.rc
contrib/QtCreator/MEGAcmd/MEGAcmdShell/: .gitignore  MEGAcmdShell.pro  icon.rc
contrib/QtCreator/MEGAcmd/MEGAcmdTests/: MEGAcmdTests.pro
contrib/QtCreator/MEGAcmd/MEGAcmdUpdateGenerator/: MEGAcmdUpdateGenerator.pro
contrib/QtCreator/MEGAcmd/MEGAcmdUpdater/: MEGAcmdUpdater.pro  icon.rc
contrib/docs/: BACKUPS.md  DEBUG.md  FTP.md  FUSE.md  WEBDAV.md  generate_command_docs.py  index.md
contrib/docs/commands/: attr.md  autocomplete.md  backup.md  cancel.md  cat.md  cd.md  clear.md  codepage.md  configure.md  confirm.md  confirmcancel.md  cp.md  debug.md  deleteversions.md  df.md  du.md  errorcode.md  exclude.md  exit.md  export.md  find.md  ftp.md  fuse-add.md  fuse-config.md  fuse-disable.md  fuse-enable.md  fuse-flags.md  fuse-remove.md  fuse-set.md  fuse-show.md  get.md  graphics.md  help.md  https.md  import.md  invite.md  ipc.md  killsession.md  lcd.md  log.md  (+37 more)
contrib/sanitizer/: asan.suppressions  lsan.suppressions  tsan.suppressions
contrib/updater/: README.md  filesmacos.txt  filesmacosemergency.txt  fileswin.txt  fileswin64.txt
docs/: generate_command_docs.py
docs/commands/: cat.md  du.md  exclude.md  export.md  ftp.md  help.md  log.md  login.md  permissions.md  pwd.md  update.md  webdav.md
jenkinsfile/: Jenkinsfile_Generate_command_docs  Jenkinsfile_MR_linux  Jenkinsfile_MR_linux_packages  Jenkinsfile_MR_macos  Jenkinsfile_MR_windows
jenkinsfile/Branch_status/: Jenkinsfile_linux_develop_release  Jenkinsfile_linux_packages  Jenkinsfile_macOS_packages  Jenkinsfile_windows_installers
snap/: snapcraft.yaml
src/: comunicationsmanager.cpp  comunicationsmanager.h  comunicationsmanagerfilesockets.cpp  comunicationsmanagerfilesockets.h  comunicationsmanagernamedpipes.cpp  comunicationsmanagernamedpipes.h  comunicationsmanagerportsockets.cpp  comunicationsmanagerportsockets.h  configurationmanager.cpp  configurationmanager.h  deferred_single_trigger.h  include.am  listeners.cpp  listeners.h  megacmd.cpp  megacmd.h  megacmd_events.cpp  megacmd_events.h  megacmd_fuse.cpp  megacmd_fuse.h  megacmd_rotating_logger.cpp  megacmd_rotating_logger.h  megacmd_server_main.cpp  megacmd_src_file_list.h.in  megacmd_utf8.cpp  megacmd_utf8.h  megacmdcommonutils.cpp  megacmdcommonutils.h  megacmdexecuter.cpp  megacmdexecuter.h  megacmdlogger.cpp  megacmdlogger.h  megacmdplatform.h  megacmdplatform.mm  megacmdsandbox.cpp  megacmdsandbox.h  megacmdtransfermanager.cpp  megacmdtransfermanager.h  megacmdutils.cpp  megacmdutils.h  (+10 more)
src/client/: mega-attr  mega-backup  mega-cancel  mega-cat  mega-cd  mega-configure  mega-confirm  mega-confirmcancel  mega-cp  mega-debug  mega-deleteversions  mega-df  mega-downloads  mega-du  mega-errorcode  mega-exclude  mega-export  mega-find  mega-ftp  mega-fuse-add  mega-fuse-config  mega-fuse-disable  mega-fuse-enable  mega-fuse-flags  mega-fuse-remove  mega-fuse-set  mega-fuse-show  mega-get  mega-graphics  mega-help  mega-https  mega-import  mega-invite  mega-ipc  mega-killsession  mega-lcd  mega-log  mega-login  mega-logout  mega-lpwd  (+35 more)
src/client/python/: mega-execports
src/client/win/: mega-attr.bat  mega-backup.bat  mega-cancel.bat  mega-cat.bat  mega-cd.bat  mega-configure.bat  mega-confirm.bat  mega-confirmcancel.bat  mega-cp.bat  mega-debug.bat  mega-deleteversions.bat  mega-df.bat  mega-downloads.bat  mega-du.bat  mega-errorcode.bat  mega-exclude.bat  mega-export.bat  mega-find.bat  mega-ftp.bat  mega-fuse-add.bat  mega-fuse-config.bat  mega-fuse-disable.bat  mega-fuse-enable.bat  mega-fuse-flags.bat  mega-fuse-remove.bat  mega-fuse-set.bat  mega-fuse-show.bat  mega-get.bat  mega-graphics.bat  mega-help.bat  mega-https.bat  mega-import.bat  mega-invite.bat  mega-ipc.bat  mega-killsession.bat  mega-lcd.bat  mega-log.bat  mega-login.bat  mega-logout.bat  mega-lpwd.bat  (+30 more)
src/contrib/check_packages/: check_all_megacmd_packages.sh  check_megacmd_package.sh
src/loader/: megacmdloader.cpp
src/megacmdshell/: megacmdshell.cpp  megacmdshell.h  megacmdshellcommunications.cpp  megacmdshellcommunications.h  megacmdshellcommunicationsnamedpipes.cpp  megacmdshellcommunicationsnamedpipes.h
src/updategenerator/: MEGAUpdateGenerator.cpp
src/updater/: MacUtils.h  MacUtils.mm  MegaUpdater.cpp  Preferences.h  UpdateTask.cpp  UpdateTask.h
tests/: megacmd_clear_root.sh  megacmd_create_dir_tree.sh  megacmd_find_test.py  megacmd_find_test.sh  megacmd_get_test.py  megacmd_get_test.sh  megacmd_misc_test.py  megacmd_put_test.py  megacmd_put_test.sh  megacmd_rm_test.py  megacmd_rm_test.sh  megacmd_serving_test.py  megacmd_tests_common.py
tests/common/: Instruments.cpp  Instruments.h  TestUtils.cpp  TestUtils.h
tests/integration/: BasicTests.cpp  CatTests.cpp  ExportTests.cpp  FuseTests.cpp  MegaCmdTestingTools.cpp  MegaCmdTestingTools.h  PutTests.cpp  StalledIssuesTests.cpp  SyncIgnoreTests.cpp  SyncIssuesTests.cpp  main.cpp
tests/unit/: ComunicationsManagerFileSocketsTests.cpp  FileSocketCommunicationsTests.cpp  MegaCmdCommonUtilsTests.cpp  OptionsFlagsUtilsTests.cpp  PlatformDirectoriesTest.cpp  PlatformDirectoriesTests.cpp  StringUtilsTests.cpp  Utf8Tests.cpp  UtilsTests.cpp  main.cpp
(+3 files in other folders)
